task-07-require-readonly-rootfs-audit/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs-audit
spec:
  validationFailureAction: Audit
  rules:
    - name: check-readonly-rootfs
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Containers should set securityContext.readOnlyRootFilesystem: true."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
